[kyne.k] java-racingcar-kakao step2 리뷰요청드립니다 (#70)
* docs(racing): Readme.md 프로젝트 재설계 및 step2 계획 작성

- step2 계획 및 재설계 사항 작성

* refactor(racing): RandomNumberGenerator 랜덤 숫자 타입 및 생성 로직 변경

- 랜덤 숫자 타입 수정
  - double -> int
- 생성 로직 변경
  - Math.random() 활용 -> Random.nextInt() 활용
- generate()한 값을 사용하는 로직의 parameter type 수정

* chore(racing): Car 클래스 수정

- Comparable -> Comparable<Object>
- toString() 메서드 수정
  - 문자열 덧셈 -> 포맷팅

* refactor(racing): static 키워드 추가

- 상수들에 대해 누락된 static 추가

* refactor(racing): 메서드의 매개변수들에 final 키워드 추가

- 메서드의 매개변수에 final 키워드를 추가하여 메서드 내부에서 재할당을 방지

* feat(racing): functional interface Movable 생성

- Movable 생성
  - isMoving() 메서드

* feat(racing): RandomlyMovable 생성, RandomNumberGenerator를 static으로 변경

- RandomlyMovable (implements Movable) 생성
  - isMoving() 메서드 구현
  - generateRandomNumber() 메서드 구현
- RandomNumberGenerator를 static 클래스로 변경

* feat(racing): CarDTO 클래스 생성 및 구현

- Car 클래스의 이름, 이동 거리 정보를 담은 DTO 구현

* feat(racing): CarDtoDistanceComparator 구현

- CarDTO 간 거리 비교를 가능하도록 하는 Comparator 구현

* docs(racing): 설계 사항에 CarDtoDistanceComparator 반영, 오타 수정

- 설계 목록 dto 패키지 하단에 CarDtoDistanceComparator 추가
- 오타 수정
  - RandomGenerator -> RandomNumberGenerator

* feat(racing): CarDTO 클래스의 팩터리 메서드 구현

- from() 메서드
- Car 클래스의 toDTO() 메서드 구현

* refactor(racing): Cars 클래스의 getWinners() 메서드 DTO를 활용하도록 수정 / Car 클래스의 getter 제거

- getCarDtoList() 메서드 생성 및 구현
- getWinners() 메서드 구현 변경
- Car 클래스의 getName() 메서드 제거

* refactor(racing): Car 클래스의 Movable 필드 추가, move() 구현, 비교 메서드 제거

- Comparable 구현 제거
- Movable 필드 및 생성자 추가
- 매개변수 없는 move() 구현

* test(racing): CarTest 수정

- Car의 비교 대신 CarDTO를 비교하도록 변경
- Movable을 람다식으로 생성하여 결과를 고정하여 테스트

* chore(racing): Movable 인터페이스 FunctionalInterface 어노테이션 추가

- Movable 인터페이스에 FunctionalInterface 어노테이션 추가

* refactor(racing): Car 클래스의 move(int number) 메서드를 Movable 인터페이스를 활용하도록 대체

- Car 클래스의 move(int number) 메서드 제거
- Cars 클래스에서 Car::move에 인자를 넘기는 메서드를 넘기지 않